Changed H3 conversion to parallelized version, using delayed.  1 day from 40 sec to 20 sec.

--- a/test.ipynb
+++ b/test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +57,116 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>precipitation</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h3_index</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>612490487321853951</th>\n",
+       "      <th>2022-01-01 07:00:00</th>\n",
+       "      <td>0.000106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">612490666202628095</th>\n",
+       "      <th>2022-01-01 08:00:00</th>\n",
+       "      <td>0.000124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 09:00:00</th>\n",
+       "      <td>0.000143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">612490667936972799</th>\n",
+       "      <th>2022-01-01 08:00:00</th>\n",
+       "      <td>0.000107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 09:00:00</th>\n",
+       "      <td>0.000132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">612490669539196927</th>\n",
+       "      <th>2022-01-01 08:00:00</th>\n",
+       "      <td>0.000114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 09:00:00</th>\n",
+       "      <td>0.000124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">612490669816020991</th>\n",
+       "      <th>2022-01-01 08:00:00</th>\n",
+       "      <td>0.000138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 09:00:00</th>\n",
+       "      <td>0.000153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>612490670094942207</th>\n",
+       "      <th>2022-01-01 08:00:00</th>\n",
+       "      <td>0.000128</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        precipitation\n",
+       "h3_index           timestamp                         \n",
+       "612490487321853951 2022-01-01 07:00:00       0.000106\n",
+       "612490666202628095 2022-01-01 08:00:00       0.000124\n",
+       "                   2022-01-01 09:00:00       0.000143\n",
+       "612490667936972799 2022-01-01 08:00:00       0.000107\n",
+       "                   2022-01-01 09:00:00       0.000132\n",
+       "612490669539196927 2022-01-01 08:00:00       0.000114\n",
+       "                   2022-01-01 09:00:00       0.000124\n",
+       "612490669816020991 2022-01-01 08:00:00       0.000138\n",
+       "                   2022-01-01 09:00:00       0.000153\n",
+       "612490670094942207 2022-01-01 08:00:00       0.000128"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
    ]
   }
  ],
